Added better testing